After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 708200 - multiqueue: Switching audio tracks doesn't work on some files
multiqueue: Switching audio tracks doesn't work on some files
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other Linux
: High blocker
: 1.2.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-09-16 22:25 UTC by Brendan Long
Modified: 2013-12-03 21:01 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Script for playing a video and then switching the audio or video track (1.59 KB, text/plain)
2013-09-16 22:25 UTC, Brendan Long
  Details
multiqueue: Wake up on reconfigure event (1.26 KB, patch)
2013-12-03 03:33 UTC, Olivier Crête
committed Details | Review

Description Brendan Long 2013-09-16 22:25:57 UTC
Created attachment 255069 [details]
Script for playing a video and then switching the audio or video track

See the attached script. If I run it against this matroska file, switching playbin's "current-audio" causes it to stop playing and lock up:

    # Download this file to test.mkv:
    # https://www.dropbox.com/s/aggvr6ch12oqy76/test.mkv
    gst-git ./switch-track.py file:///$PWD/test.mkv audio

Switching the video track works fine though:

    gst-git ./switch-track.py file:///$PWD/test.mkv video

Also it works in this ogg file:

    # Download to test.ogv
    # https://www.dropbox.com/s/69iigecsec0gcp3/test.ogv
    gst-git ./switch-track.py file:///$PWD/test.ogv audio
    gst-git ./switch-track.py file:///$PWD/test.ogv video
Comment 1 Olivier Crête 2013-11-29 23:44:09 UTC
I can reproduce your problem, and this worked in 1.0, so we should fix it.
Comment 2 Olivier Crête 2013-12-03 03:33:01 UTC
Created attachment 263365 [details] [review]
multiqueue: Wake up on reconfigure event

After patch bda406c4, the state of the singlequeue was set to OK, but nothing
would then wake up the thread, as the other wakeup functions only look at
singlequeues that are marked as having received as not-linked.
Comment 3 Olivier Crête 2013-12-03 03:34:41 UTC
I don't understand all of the tricky code in multiqueue, so please review this change carefully.

Reverting patch bda406c4, which fixed bug #676304 also corrects this problem.
Comment 4 Sebastian Dröge (slomo) 2013-12-03 08:06:36 UTC
Comment on attachment 263365 [details] [review]
multiqueue: Wake up on reconfigure event

Yes, that is correct
Comment 5 Olivier Crête 2013-12-03 21:01:26 UTC
Fixed in git master

commit a90ce304c823ac47f8a31b33a61db826c548d217
Author: Olivier Crête <olivier.crete@collabora.com>
Date:   Mon Dec 2 22:22:36 2013 -0500

    multiqueue: Wake up on reconfigure event
    
    After patch bda406c4, the state of the singlequeue was set to OK, but nothin
    would then wake up the thread, as the other wakeup functions only look at
    singlequeues that are marked as having received as not-linked.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=708200


And in 1.2 as d935be2d78e3bcdbf540e90d68f8042490f5d733